# embwasm

./: .claudeignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
demo/: CMakeLists.txt  api_config.yaml  host_apis.h  main.cpp
demo/benchmark/: CMakeLists.txt  host_apis.hpp  hostapi.wit  main.cpp
demo/benchmark/wasm/: bench.c
demo/common/thread_compat/: CMakeLists.txt  thread_compat.hpp  thread_compat_freertos.cpp  thread_compat_std.cpp
demo/common/wasm/: stdlib.c
demo/hello/: CMakeLists.txt  README.md  host_apis.cpp  host_apis.hpp  hostapi.wit  main.cpp  module_config.yaml
demo/hello/wasm/: hello.c  main.c
demo/http/: CMakeLists.txt  hostapi.wit  main.cpp
demo/http/wasm/: main.c
demo/thread/: CMakeLists.txt  README.md  host_apis.cpp  host_apis.hpp  hostapi.wit  main.cpp  module_config.yaml
demo/thread/wasm/: main.c
demo/thread_async/: CMakeLists.txt  host_apis.cpp  host_apis.hpp  hostapi.wit  main.cpp
demo/thread_async/wasm/: main.c
demo_cm3/: CMakeLists.txt  FreeRTOSConfig.h  README.md  bench_main.cpp  host_apis.hpp  hostapi.wit  link.ld  main.c  startup.c  syscalls.c  uart.c  uart.h
demo_cm3/cmake/: arm-clang-toolchain.cmake
demo_cm3/renode/: custom_cm3.repl  run_bench.resc
docs/: api_impl_for_wasm.md  coding_style.md  cpp_coding_style.md  getting_started.md  multithreading.md  sockets.md  tool_usage.md  wasm_trans_compile.md  wasm_vm_spec.md
include/: embwasm.h  embwasm.hpp  wasm_api.h  wasm_api.hpp  wasm_config.h  wasm_config.hpp  wasm_config_spec.hpp  wasm_engine.h  wasm_engine.hpp  wasm_limits.hpp  wasm_memory_pool.h  wasm_memory_pool.hpp  wasm_platform.h  wasm_platform.hpp  wasm_thread.h  wasm_thread.hpp  wasm_types.h  wasm_types.hpp
platform/cpp_std_thread/: wasm_platform.cpp
platform/freertos/: wasm_platform.cpp
platform/macos/: wasm_platform.cpp
platform/uitron/: wasm_platform.cpp
platform/windows/: wasm_platform.cpp
scripts/: install_llvm_et_arm.sh
src/: CMakeLists.txt  wasm_api.cpp  wasm_engine.cpp  wasm_memory_pool.cpp  wasm_thread.cpp
src/hostmodule/threads/: embwasm_hostmodule_thread.cpp  embwasm_hostmodule_thread.h  embwasm_hostmodule_thread.hpp
targets/cm3-freertos/: CMakeLists.txt  FreeRTOSConfig.h  freertos_start.c  link.ld  renode_exit.c  renode_exit.h  startup.c  syscalls.c
targets/cm3-freertos/cmake/: arm-clang-toolchain.cmake  cm3_freertos.cmake
targets/cm3-freertos/renode/: custom_cm3.repl  run_firmware.resc.in
test/: CMakeLists.txt  api_config.yaml  host_apis.cpp  host_apis.h  host_apis.hpp  module_config.yaml  test_env.wit  wasm_api_test.cpp  wasm_engine_test.cpp  wasm_memory_pool_test.cpp  wasm_platform_test.cpp  wasm_thread_test.cpp
test/core/: CMakeLists.txt  host_apis.cpp  host_apis.hpp  test_env.wit  wasm_api_test.cpp  wasm_engine_test.cpp  wasm_memory_pool_test.cpp  wasm_thread_test.cpp
test/core/official_test_wasm/: README.md  WasmInterpreter.hpp  convert_to_json.sh  wasm_embedded_data.h
test/core/official_test_wasm/core_json/binary/: binary.json
test/core/official_test_wasm/core_json/binary-leb128/: binary-leb128.json
test/core/official_test_wasm/core_json/br_table/: br_table.json
test/core/official_test_wasm/core_json/call_indirect/: call_indirect.json
test/core/official_test_wasm/core_json/comments/: comments.json
test/core/official_test_wasm/core_json/conversions/: conversions.json
test/core/official_test_wasm/core_json/custom/: custom.json
test/core/official_test_wasm/core_json/data/: data.json
test/core/official_test_wasm/core_json/elem/: elem.json
test/core/official_test_wasm/core_json/exports/: exports.json
test/core/official_test_wasm/core_json/f32/: f32.json
test/core/official_test_wasm/core_json/f64/: f64.json
test/core/official_test_wasm/core_json/func/: func.json
test/core/official_test_wasm/core_json/global/: global.json
test/core/official_test_wasm/core_json/i32/: i32.json
test/core/official_test_wasm/core_json/i64/: i64.json
test/core/official_test_wasm/core_json/imports/: imports.json
test/core/official_test_wasm/core_json/local_tee/: local_tee.json
test/core/official_test_wasm/core_json/memory_trap/: memory_trap.json
test/core/official_test_wasm/core_json/select/: select.json
test/core/official_test_wasm/core_json/table_fill/: table_fill.json
test/core/official_test_wasm/core_json/table_grow/: table_grow.json
test/core/official_test_wasm/core_json/tokens/: tokens.json
test/core/official_test_wasm/core_json/type/: type.json
test/core/official_test_wasm/core_json/unreached-invalid/: unreached-invalid.json
test/core/official_test_wasm/core_json/unreached-valid/: unreached-valid.json
test/stack_switch/: CMakeLists.txt  host_apis.cpp  host_apis.hpp  test_env.wit  wasm_stack_switch_test.cpp
test/stack_switch/wasm/: main.c
test/wasm_host_modules/: CMakeLists.txt
test/wasm_host_modules/stdio/: CMakeLists.txt  embwasm_hostmodule_stdio_test.cpp  test_stdio.wit
test/wasm_host_modules/wasi/io/: test_io.wit
tools/: analyze_wasm_stack.py  gen_gtest_from_wasm_json.py
tools/codegen/: embwasm_util.py  gen_api.py  generate_test_wasms.py  wasm_to_cpp.py
wasm_host_modules/sockets/: embwasm_hostmodule_socket.cpp  embwasm_hostmodule_socket.hpp  sockets.wit  wasi_socket_platform.hpp  wasi_sockets.h
wasm_host_modules/src/sockets/: CMakeLists.txt  embwasm_hostmodule_socket.cpp  embwasm_hostmodule_socket.hpp  wasi_socket_platform.hpp
wasm_host_modules/src/sockets/platform/macos/: socket_platform.cpp
wasm_host_modules/src/sockets/platform/windows/: socket_platform.cpp
wasm_host_modules/src/sys_rt/stdio/: CMakeLists.txt  embwasm_hostmodule_stdio.cpp  embwasm_hostmodule_stdio.hpp
wasm_host_modules/src/sys_rt/system/: CMakeLists.txt  embwasm_hostmodule_system.cpp  embwasm_hostmodule_system.hpp
wasm_host_modules/stdio/: embwasm_hostmodule_stdio.cpp  embwasm_hostmodule_stdio.hpp  stdio.wit
wasm_host_modules/threads/: embwasm_hostmodule_thread.cpp  module_config.yaml  threads.wit
wasm_host_modules/wit/sockets/: sockets.wit
wasm_host_modules/wit/sys_rt/: stdio.wit  system.wit  (+1 more)
(+7 files in other folders)
